--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-</head>
+  </head>
 <body>
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
 <div class="container">
@@ -17,10 +17,11 @@
  <br>
  <button id="send" class="btn btn-success">Send</button>
  </div>
- <div id="messages">
+ <div id="messages" ondblclick="curtirMensagem()">
 </div>
 </div>
 <script src="/socket.io/socket.io.js"></script>
+
 <script>
 $(() => {
     $("#send").click(()=>{
@@ -45,6 +46,20 @@ function sendMessage(message){
  }
 var socket = io();
 socket.on('message', addMessages)
+
+//Utils
+var sendButton = document.getElementById("send");
+sendButton.addEventListener('click', function () {
+    location.reload();
+});
+
+let curtidas = 0;
+function curtirMensagem() {
+  curtidas += 1;
+  alert("Você curtiu a mensagem! Total de curtidas: " + curtidas);
+}
+
+
 </script>
 </body>
 </html>
